# Particlops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/particle_gen/: app.py  cli.py
src/particle_gen/core/: export.py  particles.py  renderer.py
src/particle_gen/gui/: color_section.py  drag_spinbox.py  gl_widget.py  main_window.py  sidebar.py  theme.py
src/particle_gen/presets/: manager.py  schema.py
src/particle_gen/presets/defaults/: fireflies.json  gentle_snow.json  rising_sparks.json  stardust.json  vortex_swirl.json
src/particle_gen/shaders/: __init__.py  particles.frag  particles.vert
tests/: test_cli.py  test_export.py  test_particles.py  test_preset.py  test_timeline.py
