[project]
name = "particlops"
version = "0.1.0"
description = "Seamlessly looped particle video generator"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7,<7",
    "moderngl>=5.10,<6",
    "numpy>=1.26,<3",
    "Pillow>=10.0,<12",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
particlops = "particle_gen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/particle_gen"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
